# video-backend-py

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  image.py  main.py  main.spec  pyproject.toml  requirements.cicd.txt  requirements.txt  test.html  utils.py  video.py
